cmake_minimum_required(VERSION 2.6)

PROJECT(cgsysstat)
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(test)

INSTALL(DIRECTORY bin/ DESTINATION ${CMAKE_INSTALL_PREFIX}/bin PATTERN "bin/*" PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ)

INSTALL(DIRECTORY lib/ DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
INSTALL(DIRECTORY include/ DESTINATION ${CMAKE_INSTALL_PREFIX}/include)
INSTALL(FILES README DESTINATION ${CMAKE_INSTALL_PREFIX}/doc)
INSTALL(DIRECTORY share/ DESTINATION ${CMAKE_INSTALL_PREFIX}/share/ PATTERN "share/bin/*" PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ)
