cmake_minimum_required(VERSION 2.6)

PROJECT(rdstats)

INCLUDE_DIRECTORIES(
${CMAKE_SOURCE_DIR}/include
)

SET(COMMON_SOURCES common.c)
SET(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/lib)

ADD_LIBRARY(common_static STATIC ${COMMON_SOURCES}) 
SET_TARGET_PROPERTIES(common_static PROPERTIES OUTPUT_NAME "common") 
SET_TARGET_PROPERTIES(common_static PROPERTIES CLEAN_DIRECT_OUTPUT 1) 

ADD_LIBRARY(common SHARED ${COMMON_SOURCES})
SET_TARGET_PROPERTIES(common PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(common PROPERTIES VERSION 1.0 SOVERSION 1)

TARGET_LINK_LIBRARIES(common cgroup)

ADD_DEPENDENCIES(common cgroup)


